--- a/app_a/templates/app_a/base.html
+++ b/app_a/templates/app_a/base.html
@@ -1,4 +1,4 @@
-<head>Summertime sadness</head>
+<head>Summertime Sadness</head>
 <p>
     <a href="{% url 'app_a:index' %}">Home page</a>
     <a href="{% url 'app_a:topics'%}">Topics</a>
