--- a/app_a/templates/app_a/topics.html
+++ b/app_a/templates/app_a/topics.html
@@ -18,5 +18,6 @@
         <li>Nothing in test</li>
     {% endfor %}
 </ul>
+<a href="{% url 'app_a:new_topic' %}">Add a new topic</a>
 
 {% endblock content %}
