--- a/app_a/templates/app_a/base.html
+++ b/app_a/templates/app_a/base.html
@@ -1,6 +1,53 @@
-<head>Summertime Sadness</head>
-<p>
-    <a href="{% url 'app_a:index' %}">Home page</a>
-    <a href="{% url 'app_a:topics' %}">Topics</a>
-</p>
-{% block content %} {% endblock content %}
+{% load bootstrap4 %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shring-to-fit=no">
+    <title>Learning log</title>
+    {% bootstrap_css %}
+    {% bootstrap_javascript jquery='full' %}
+</head>
+<body>
+    <nav class="navbar navbar-expand-md navbar-light bg-light mb-4 border">
+        <a class="navbar-brand" href="{% url 'app_a:index' %} ">Summertime Sadness</a>
+        <button 
+        class="navbar-toggler" type="button" data-toggle="collapse" 
+        data-target="#navbarCollapse" aria-controls="navbarCollapse"
+        aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nar mr-auto">
+                <li class="nav-item">
+                    <a href="{% url 'app_a:topics' %}" class="nav-link">Topics</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <span class="navbar-text">Hello, {{user.username}}.</span>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'users:logout' %}" class="nav-link">Log out</a>
+                    </li>
+                {% else %}
+                    </li class="nav-item">
+                        <a href="{% url 'users:register' %}" class="nav-link">Register</a>
+                    </li> 
+                    <li class="nav-item">
+                        <a href="{% url 'users:login' %}" class="nav-link">Log in</a>
+                    </li>
+                {% endif %}
+
+
+            </ul>
+        </div>
+    </nav>
+    
+</body>
+</html>
