--- a/app_a/templates/app_a/base.html
+++ b/app_a/templates/app_a/base.html
@@ -11,7 +11,7 @@
     {% bootstrap_javascript jquery='full' %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light mb-4 border">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4 border">
         <a class="navbar-brand" href="{% url 'app_a:index' %} ">Summertime Sadness</a>
         <button 
         class="navbar-toggler" type="button" data-toggle="collapse" 
