--- a/app_a/templates/app_a/index.html
+++ b/app_a/templates/app_a/index.html
@@ -1,6 +1,12 @@
 
 {% extends "app_a/base.html" %}
-
-{% block content %}
-<p>learning log helps you keep track of your learning, for any topic</p>
-{%endblock content %}
+{% block page_header %}
+<div>
+    <h1 class="display-3">Track your learning</h1>
+    <p class="lead">Make your own Learning Log, and keep a list of the 
+        topis you're learning about. Whenever you're learning about a topic,
+        make an entry summarizing what you've learned.
+    </p>
+    <a href="{% url 'users:register' %}" class="btn btn-lg btn-primary" role="button">Register &raquo;</a>
+</div>
+{% endblock page_header %}
