--- a/app_a/templates/app_a/topics.html
+++ b/app_a/templates/app_a/topics.html
@@ -1,16 +1,19 @@
 {% extends 'app_a/base.html' %}
+{% block page_header %}
+    <h1>Topics</h1>
+{% endblock page_header %}
 {% block content %}
 
-<p>Topics<p>
+
 <ul>
     
     {% for topic in topics %}
-        <li>
-            <a href="{% url 'app_a:topic' topic.id %}">{{topic}}</a>
+        <li><h3>
+            <a href="{% url 'app_a:topic' topic.id %}">{{topic}}</a></h3>
         </li>
 
     {% empty %}
-        <li>No topics have been added yet.</li>
+        <li><h3>No topics have been added yet.</h3></li>
     {% endfor %}
     {% for i in test %}
         <li>{{i}}</li>
@@ -18,6 +21,6 @@
         <li>Nothing in test</li>
     {% endfor %}
 </ul>
-<a href="{% url 'app_a:new_topic' %}">Add a new topic</a>
+<h3><a href="{% url 'app_a:new_topic' %}">Add a new topic</a></h3>
 
 {% endblock content %}
