--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,13 +1,19 @@
 {% extends 'app_a/base.html' %}
+{% load bootstrap4 %}
+{% block page_header %}
+    <h2>Log in to your account.</h2>
+{% endblock page_header %}
 {% block content %}
-    {% if form.erros %} 
-        <p>Your username and password didn't match. Please try again.</p>   
-    {% endif %} 
 
-    <form method="POST" action="{% url 'users:login' %}" >
+        
+    
+
+    <form method="POST" action="{% url 'users:login' %}" class="form">
         {% csrf_token %}
-        {{ form.as_p}}
-        <button name="submit">Log in</button>
+        {% bootstrap_form form %}
+        {% buttons %}
+        <button name="submit" class="btn-primary">Log in</button>
+        {% endbuttons %}
         <input type="hidden" name="text" value="{% url 'app_a:index' %} " />
     </form>
 
